# sonfolio

./: .gitignore  LICENSE  README.md  codex.md  flake.nix  mypy.ini  ruff.toml
data-gen/: pyproject.toml
data-gen/src/data_gen/: __init__.py  __main__.py  cli.py  tokenizer.py
docs/: gpu_exploration.md
shared/: README.md  pyproject.toml
shared/src/sonfolio_shared/: __init__.py
